[workspace]
members = [
    "game"
]

[workspace.package]
name = "puzzle-15"
version = "0.0.1"
edition = "2021"
authors = [ "Olexandr Koval <kovalidis@gmail.com>" ]

[workspace.dependencies]
anyhow = "1.0.71"

[package]
name = "puzzle_15"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
