[package]
name = "web"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
game = { path = "../game" }
getrandom = { version = "0.2.10", features = ["js"] }
gloo = "0.8.1"
log = "0.4.19"
rand = "0.8.5"
wasm-bindgen = "0.2.87"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.64", features = [ "Touch", "TouchList" ] }
yew = { version = "0.20.0", features = ["csr"] }
